--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="app/scss/style.css">
   
-  <title>Frontend Mentor | Easybank landing page</title>
+  <title>My Portfolio | Luis Muniz Benitez</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -16,86 +18,52 @@
 </head>
 <body>
 
-  Home
-  About
-  Contact
-  Blog
-  Careers
+<header class="header">
+<div class="overlay has-fade"></div>
 
-  Request Invite
+  <nav class="container flex flex-jc-sb flex-ai-c">
+    <a href="/" class = "header__logo">
+      <img src="images/logo.svg" alt="My Portfolio"/>
+    </a>
 
-
-
-  Next generation digital banking
-
-  Take your financial life online. Your Easybank account will be a one-stop-shop 
-  for spending, saving, budgeting, investing, and much more.
-
-  Request Invite
+    <a id="btnHamburger" href="#" class="header__toggle hide-for-desktop">
+      <span></span>
+      <span></span>
+      <span></span>
+    </a>
 
 
+    <div class="header__links hide-for-mobile">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+      <a href="#">Projects</a>
+      <a href="#">Education</a>
+    </div>
 
-  Why choose Easybank?
+    <a href="#" class="button header__cta hide-for-mobile">Request Invite</a>
+  </nav>
 
-  We leverage Open Banking to turn your bank account into your financial hub. Control 
-  your finances like never before.
+  <div class= "header__menu has-fade">
+    <a href="">Home</a>
+    <a href="">About</a>
+    <a href="">Contact</a>
+    <a href="">Projects</a>
+    <a href="">Education</a>
 
-  Online Banking
-  Our modern web and mobile applications allow you to keep track of your finances 
-  wherever you are in the world.
-
-  Simple Budgeting
-  See exactly where your money goes each month. Receive notifications when you’re 
-  close to hitting your limits.
-
-  Fast Onboarding
-  We don’t do branches. Open your account in minutes online and start taking control 
-  of your finances right away.
-
-  Open API
-  Manage your savings, investments, pension, and much more from one account. Tracking 
-  your money has never been easier.
-
-  
-
-  Latest Articles
-
-  By Claire Robinson
-  Receive money in any currency with no fees
-  The world is getting smaller and we’re becoming more mobile. So why should you be 
-  forced to only receive money in a single …
-
-  By Wilson Hutton
-  Treat yourself without worrying about money
-  Our simple budgeting feature allows you to separate out your spending and set 
-  realistic limits each month. That means you …
-
-  By Wilson Hutton
-  Take your Easybank card wherever you go
-  We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
-  while you’re abroad. We’ll even show you …
-
-  By Claire Robinson
-  Our invite-only Beta accounts are now live!
-  After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
-  It’s easy to request an invite through the site ...
-
-  
-
-  About Us
-  Contact
-  Blog
-  Careers
-  Support
-  Privacy Policy
-
-  Request Invite
-
-  © Easybank. All Rights Reserved
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
   </div>
+
+
+</header>
+
+My name is Luis Muniz and I am a software developer. I am building this website to showcase my skills as well as experience. 
+This website has been built from scratch using HTML SASS and Javascript. I intend to host this website using AWS and its services. 
+I am native from Puerto Rico but have been living in California since October 2012 and am looking to stay. Moved at first with intentions
+of returning after two years but quickly became in love with the weather and culture that makes California so great. While living here
+I discovered my passion for traveling and experimenting new cultures and places. I have been to several countries and intend for the list 
+to keep growing. Lately I have started visiting Mexico more often and am now dating someone from that country and am concentrating in visiting
+and experimenting more of its culture.
+  <script src="/app/js/script.js"></script>
+ 
 </body>
 </html>
